dev/src/objects/Prospect__c.object
<CustomObject>
    <description>A person interered in Clay or 3VOT</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comentarios Internos sobre el Contacto</description>
        <inlineHelpText>Comentarios Internos sobre el Contacto</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <picklist>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services &amp; Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Forms__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <description>Forma de contactar al lead</description>
        <label>Other Contact Forms</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <description>El mensaje enviado por el lead.</description>
        <inlineHelpText>Overview of the Lead Value, Opportunity, what he does, why, what&apos;s the potential business with him</inlineHelpText>
        <label>Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Identifica el producto de 3VOT en el que el cliente está interesado</description>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Clay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContentCloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <defaultValue>&apos;web&apos;</defaultValue>
        <description>Forma de contactar al lead</description>
        <label>Source</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Early Adopter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Prospect</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>